Build animate.min.js at lein startup.

--- a/app-src/Makefile
+++ b/app-src/Makefile
@@ -1,14 +1,19 @@
 STATIC=../lib/index.html ../lib/style.css
 BUILD=../lib/js/app.js
-ANIM=../lib/animate.js
 
-build: $(BUILD) $(STATIC) $(ANIM)
+build: $(BUILD) $(STATIC)
 
-./app-src/src/js/animate.js: app-src/src/inkscape_animation_assistant/animation.cljs ./app-src/shims.js
-	cat ./app-src/shims.js > $@
-	wisp --no-map < app-src/src/inkscape_animation_assistant/animation.cljs >> $@
+node_modules:
+	npm i
 
-$(STATIC): public/index.html public/style.css
+animate.js: src/inkscape_animation_assistant/animation.cljs ./shims.js node_modules
+	cat ./shims.js > $@
+	./node_modules/.bin/wisp --no-map < src/inkscape_animation_assistant/animation.cljs >> $@
+
+public/animate.min.js: animate.js node_modules
+	./node_modules/.bin/uglifyjs animate.js > $@
+
+$(STATIC): public/index.html public/style.css public/animate.min.js
 	cp -av $^ ../lib/
 	touch $@
 
