Add layers png to help.

--- a/app-src/Makefile
+++ b/app-src/Makefile
@@ -1,4 +1,4 @@
-STATIC=../lib/index.html ../lib/style.css ../lib/animate.min.js ../lib/icon.png
+STATIC=../lib/index.html ../lib/style.css ../lib/animate.min.js ../lib/icon.png ../lib/layers.png
 BUILD=../lib/js/app.js
 
 build: $(BUILD) $(STATIC)
